samples/_failures_safe/1761662676_e81e13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55e0f7b5.c: In function ‘main’:
./samples/SAFE/__tmp_55e0f7b5.c:151:5: error: expected expression at end of input
  151 |     for (
      |     ^~~
./samples/SAFE/__tmp_55e0f7b5.c:151:5: error: expected declaration or statement at end of input
